Fix: Update image extension from .png to .jpeg

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="profile-photo">
-                        <img src="Samir_Resume_Pic.png" alt="Samir Sharma - Professional Photo" />
+                        <img src="Samir_Resume_Pic.jpeg" alt="Samir Sharma - Professional Photo" />
                     </div>
                 </div>
             </div>
