Update LinkedIn profile link to personal account

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <a href="#experience" class="btn btn-secondary">View Experience</a>
                     </div>
                     <div class="social-links">
-                        <a href="https://www.linkedin.com/in/sakateknologi/" target="_blank" class="social-link linkedin">
+                        <a href="https://www.linkedin.com/in/samir-sharma-25b66471/" target="_blank" class="social-link linkedin">
                             <i class="fab fa-linkedin-in"></i>
                             <span>LinkedIn Profile</span>
                         </a>
